--- a/src/app/crypto-currency/crypto-currency.component.html
+++ b/src/app/crypto-currency/crypto-currency.component.html
@@ -1,15 +1,31 @@
 <!--navbar-->
-<nav class="navbar navbar-light" style="background-color: #f7f7f7;">
-  <a class="navbar-brand" href="#">Qiaoran</a>
-  <div class="mx-auto" >
-      <h3>加密货币实时查询</h3>
+<nav class="navbar navbar-light" style="background-color: #003466;">
+  <div class="container-fluid">
+    <div class="row" style="width:100%">
+        <div class="col-4">
+          <ul class="navtitleul" >
+            <li class="navtitleli navtitle navtitleS">总市值: {{globaldata.total_market_cap_usd | currency:'USD':true:'3.0-0'}}</li>
+            <li class="navtitleli navtitle navtitleS">比特币占比: {{globaldata.bitcoin_percentage_of_market_cap }} %</li>
+            <li class="navtitleli navtitle navtitleS">流通加密币: {{globaldata.active_currencies }} 种</li>
+          </ul>
+        </div>
+        <div class="col-4">
+          <h3 class="navtitle mx-auto" style="text-align: center; vertical-align: middle;">加密货币实时查询</h3>
+        </div>
+        <div class="col-4 navtitle" style="position: relative; font-size: 0.8em;">
+          <p style="float: right; margin-bottom: 0px; position: absolute; bottom: 0; right: 0;">
+          UTC更新时间: {{ CryptoCurrency[0].last_updated * 1000| date:'yyyy/MM/dd h:mma' }} </p>
+        </div>
+    </div>
   </div>
 </nav>
 
 <a href="javascript:" id="return-to-top"><i class="fa fa-chevron-up" aria-hidden="true"></i></a>
 <!-- top row -->
 <div class="container top-buffer">
-    <div class="row justify-content-between">
+    <div class="row ">
+      <div class="col-1">
+      </div>
       <!-- 货币切换 -->
       <div class="col-6">
         <form class="form-inline">
@@ -33,26 +49,22 @@
             <button type="button" class="btn btn-outline-primary" (click)="performSearch(searchTerm)">确定</button>
         </form>
       </div>
+      <div class="col-2" style="position: relative;">
+        <p style="float: right; margin-bottom: 7px; position: absolute; bottom: 0; right: 0;">点击货币名查看详情</p>
+      </div>
       <!-- search -->
-      <div class="form-group col-5">
-        <div class="row no-gutters justify-content-end">
-          <div class="col-7"> 
-            <label>更新时间: {{ CryptoCurrency[0].last_updated * 1000| date:'yyyy/MM/dd h:mma' }} </label>
-          </div>
-          <div class="col-5">  
-            <input type="text" class="search form-control" placeholder="搜索">
-          </div>
-        </div>
+      <div class="col-2">
+        <input type="text" class="search form-control" placeholder="搜索">
       </div>
     </div>
 </div>
 
 <!-- table -->
-<div class="container">
+<div class="container" style="margin-top: 1em; ">
   <div class="row justify-content-md-center">
     <div class="col col-lg-1">
     </div>
-    <div class="col-12 col-md-auto">
+    <div class="col-12 col-md-auto" style="border-left: 1px solid black; border-right: 1px solid black;">
       <table class="table results table-hover">
         <thead class="thead-default">
             <tr>
@@ -89,7 +101,7 @@
               <td class="text-center tableRowHeight">{{ item.rank }}</td>
               <td class="text-center tableRowHeight">
                 <button type="button" class="btn btn-link tableContentName" data-toggle="modal" data-target="#InfoModal"
-                (click)="onClick(item,lgModal)">
+                (click)="showDetails(item,lgModal)">
                   {{ item.name }}
                 </button>
               </td>
@@ -121,9 +133,9 @@
   </div>
   <!-- pagination -->
   <div class="row justify-content-end">
-    <div class="col-8">
+    <div class="col-6">
     </div>
-    <div class="col-4">
+    <div class="col-6">
       <pagination-controls class="pull-right" (pageChange)="p = $event"></pagination-controls>
     </div>
   </div>
@@ -134,7 +146,11 @@
 <!-- footer -->
 <footer class="footer">
   <div class="container">
-    <p>数据来源<a href="https://coinmarketcap.com/">CoinMarketCap</a>，每5分钟更新一次</p>
+    <div class="row justify-content-center">
+      <div class="col-4" style="font-size: 0.8em;">
+        数据源<a href="https://coinmarketcap.com/">CoinMarketCap</a>，数据源每5分钟更新 by Qiaoran
+      </div>
+    </div>
   </div>
 </footer>
 
@@ -143,7 +159,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title modaltitle" id="InfoModalLabel" >{{selecteditem?.name}}币详细信息</h5>
+        <h5 class="modal-title modaltitle" id="InfoModalLabel" >{{showdetails?.name}}币详细信息</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -155,55 +171,55 @@
               <div class="form-group row">
                 <label class="col-sm-6 col-form-label">市值排名:</label>
                 <div class="col-sm-6">
-                  <input type="text" readonly class="form-control-plaintext" value={{selecteditem?.rank}}>
+                  <input type="text" readonly class="form-control-plaintext" value={{showdetails?.rank}}>
                 </div>
               </div>
               <div class="form-group row">
                 <label class="col-sm-6 col-form-label">美元价格:</label>
                 <div class="col-sm-6">
-                  <input type="text" readonly class="form-control-plaintext" value={{selecteditem?.price_usd}}>
+                  <input type="text" readonly class="form-control-plaintext" value={{showdetails?.price_usd}}>
                 </div>
               </div>
               <div class="form-group row">
                 <label class="col-sm-6 col-form-label">比特币价格:</label>
                 <div class="col-sm-6">
-                  <input type="text" readonly class="form-control-plaintext" value={{selecteditem?.price_btc}}>
+                  <input type="text" readonly class="form-control-plaintext" value={{showdetails?.price_btc}}>
                 </div>
               </div>
               <div class="form-group row">
                 <label class="col-sm-6 col-form-label">美元市值:</label>
                 <div class="col-sm-6">
-                  <input type="text" readonly class="form-control-plaintext" value={{selecteditem?.market_cap_usd}}>
+                  <input type="text" readonly class="form-control-plaintext" value={{showdetails?.market_cap_usd}}>
                 </div>
               </div>
               <div class="form-group row">
                 <label class="col-sm-6 col-form-label">可用供量:</label>
                 <div class="col-sm-6">
-                  <input type="text" readonly class="form-control-plaintext" value={{selecteditem?.available_supply}}>
+                  <input type="text" readonly class="form-control-plaintext" value={{showdetails?.available_supply}}>
                 </div>
               </div>
               <div class="form-group row">
                 <label class="col-sm-6 col-form-label">总供量:</label>
                 <div class="col-sm-6">
-                  <input type="text" readonly class="form-control-plaintext" value={{selecteditem?.total_supply}}>
+                  <input type="text" readonly class="form-control-plaintext" value={{showdetails?.total_supply}}>
                 </div>
               </div>
               <div class="form-group row">
                 <label class="col-sm-6 col-form-label">一小时变化(%):</label>
                 <div class="col-sm-6">
-                  <input type="text" readonly class="form-control-plaintext" value={{selecteditem?.percent_change_1h}}>
+                  <input type="text" readonly class="form-control-plaintext" value={{showdetails?.percent_change_1h}}>
                 </div>
               </div>
               <div class="form-group row">
                 <label class="col-sm-6 col-form-label">一天变化(%):</label>
                 <div class="col-sm-6">
-                  <input type="text" readonly class="form-control-plaintext" value={{selecteditem?.percent_change_24h}}>
+                  <input type="text" readonly class="form-control-plaintext" value={{showdetails?.percent_change_24h}}>
                 </div>
               </div>
               <div class="form-group row">
                 <label class="col-sm-6 col-form-label">一周变化(%):</label>
                 <div class="col-sm-6">
-                  <input type="text" readonly class="form-control-plaintext" value={{selecteditem?.percent_change_7d}}>
+                  <input type="text" readonly class="form-control-plaintext" value={{showdetails?.percent_change_7d}}>
                 </div>
               </div>
             </form>
